infra/k8s/observability/overlays/dev/patch-kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  tls:
    - hosts:
        - kibana-dev.kobo.79.137.32.27.nip.io
      secretName: kibana-dev-kobo-tls
  rules:
    - host: kibana-dev.kobo.79.137.32.27.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana
                port:
                  number: 5601
